# privacy-score-engine

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  scorer.py  sector_classifier.py
.github/workflows/: ci.yml
src/engine/: __init__.py  extractor.py  models.py  scorer.py  sector_classifier.py  synthesis.py  synthesis_brief.py  taxonomy.py
src/engine/prompts/: __init__.py  extraction.py  scoring.py  sector.py
tests/: test_boundary.py  test_extractor.py  test_models.py  test_scorer.py  test_sector_classifier.py  test_synthesis.py  test_synthesis_brief.py  test_taxonomy.py
tests/fixtures/sample_policies/: commbank_privacy_excerpt.txt  expected_claims_commbank.json  expected_claims_telstra.json  telstra_privacy_excerpt.txt
tests/fixtures/sample_scores/: commbank_expected_scores.json  telstra_expected_scores.json
